--- a/vignettes/RAIDS.Rmd
+++ b/vignettes/RAIDS.Rmd
@@ -1009,15 +1009,14 @@ also required. The *data.frame* must contain those 3 columns:
 
 
 ```{r runExomeAncestry, echo=TRUE, eval=TRUE, collapse=TRUE, warning=FALSE, message=FALSE}
-
 ## Path to the demo 1KG GDS file is located in this package
-data.dir <- system.file("extdata", package="RAIDS")
+dataDir <- system.file("extdata", package="RAIDS")
 
 #################################################################
 ## The path and file name for the PED RDS file
 ## will the information about the analyzed samples
 #################################################################
-filePED <- file.path(data.dir, "example", "pedEx.rds")
+filePED <- file.path(dataDir, "example", "pedEx.rds")
 ped <- readRDS(filePED)
 head(ped)
 
@@ -1027,39 +1026,34 @@ head(ped)
 ## Note that the 1KG GDS file used for this example is a
 ## simplified version and CANNOT be used for any real analysis
 #################################################################
-PATH_1KG <- file.path(data.dir, "example", "gdsRef")
+path1KG <- file.path(dataDir, "example", "gdsRef")
 
-fileName.GDS.1KG <- "ex1kg.gds"
-file.GDS <- file.path(PATH_1KG, fileName.GDS.1KG)
-
-fileName.GDS.Annot <- "exAnnot1kg.gds"
-file.Annot <- file.path(PATH_1KG, fileName.GDS.Annot)
+fileGDS <- file.path(path1KG, "ex1kg.gds")
+fileAnnotGDS <- file.path(path1KG, "exAnnot1kg.gds")
 
 #################################################################
 ## The Sample SNP pileup files (one per sample) need
 ## to be located in the same directory.
 #################################################################
-pathGeno <- file.path(data.dir, "example", "snpPileup")
+pathGeno <- file.path(dataDir, "example", "snpPileup")
 
 #################################################################
 ## The path where the Sample GDS files (one per sample)
 ## will be created need to be specified.
 #################################################################
-pathProfileGDS <- file.path(data.dir, "example", "out.tmp")
+pathProfileGDS <- file.path(dataDir, "example", "out.tmp")
 
-PATHOUT <- file.path(data.dir, "example", "res.out")
+pathOut <- file.path(dataDir, "example", "res.out")
 
 #################################################################
 ## A data frame containing general information about the study
 ## is also required. The data frame must have
 ## those 3 columns: "study.id", "study.desc", "study.platform"
 #################################################################
-studyDF <- data.frame(study.id = "MYDATA",
-                   study.desc = "Description",
-                   study.platform = "PLATFORM",
-                   stringsAsFactors = FALSE)
-
-gds_1KG <- snpgdsOpen(file.GDS)
+studyDF <- data.frame(study.id="MYDATA",
+                   study.desc="Description",
+                   study.platform="PLATFORM",
+                   stringsAsFactors=FALSE)
 
 ####################################################################
 ## Fix RNG seed to ensure reproducible results
@@ -1074,9 +1068,9 @@ set.seed(3043)
 ## The 1KG files in this example only have 6 profiles for each 
 ## subcontinental-level (for demo purpose only)
 ####################################################################
-dataRef <- select1KGPop(gds_1KG, nbSamples = 2L)
-
-closefn.gds(gds_1KG)
+gds1KG <- snpgdsOpen(fileGDS)
+dataRef <- select1KGPop(gds1KG, nbSamples=2L)
+closefn.gds(gds1KG)
 
 ## Chromosome length information
 ## chr23 is chrX, chr24 is chrY and chrM is 25
@@ -1098,27 +1092,26 @@ chrInfo <- c(248956422L, 242193529L, 198295559L, 190214555L,
 runExomeAncestry(pedStudy=ped, studyDF=studyDF,
                  pathProfileGDS=pathProfileGDS,
                  pathGeno=pathGeno,
-                 pathOut=PATHOUT,
-                 fileReferenceGDS=file.GDS,
-                 File.gds_1KG.Annot=file.Annot,
+                 pathOut=pathOut,
+                 fileReferenceGDS=fileGDS,
+                 fileReferenceAnnotGDS=fileAnnotGDS,
                  chrInfo=chrInfo,
                  dataRefSyn=dataRef)
-list.files(PATHOUT)
-list.files(file.path(PATHOUT, ped$Name.ID[1]))
+list.files(pathOut)
+list.files(file.path(pathOut, ped$Name.ID[1]))
 
 ####################################################################
 ## Show the ancestry inference (SuperPop) and 
 ## optimal number of PCA component D
 ## optimal number neighbour K
 ####################################################################
-
-resAncestry <- read.csv(file.path(PATHOUT, 
+resAncestry <- read.csv(file.path(pathOut, 
                                     paste0(ped$Name.ID[1], ".Ancestry.csv")))
 resAncestry
 
 ## Remove temporary files created for this demo
-unlink(pathProfileGDS, recursive = TRUE, force=TRUE)
-unlink(PATHOUT, recursive = TRUE, force=TRUE)
+unlink(pathProfileGDS, recursive=TRUE, force=TRUE)
+unlink(pathOut, recursive=TRUE, force=TRUE)
 ```
 
 <br>
