--- a/vignettes/RAIDS.Rmd
+++ b/vignettes/RAIDS.Rmd
@@ -109,7 +109,7 @@ devtools::install_github('KrasnitzLab/RAIDS')
 This is an overview of genetic ancestry inference from cancer-derived 
 molecular data:
 
-```{r graphMainSteps, echo = FALSE, fig.align="center", fig.cap="An overview of the genetic ancestry inference process.", out.width = '120%', results='asis', warning=FALSE, message=FALSE}
+```{r graphMainSteps, echo=FALSE, fig.align="center", fig.cap="An overview of the genetic ancestry inference process.", out.width='120%', results='asis', warning=FALSE, message=FALSE}
 knitr::include_graphics("MainSteps_v01.png")
 ```
 
@@ -131,7 +131,7 @@ in one command with the [wrapper](#wrapper) function.
 ## Step 1 - Format reference data from the 1000 Genomes (optional)
 
 
-```{r graphStep1, echo=FALSE, fig.align="center", fig.cap="Step 1 - Formatting the information from 1000 Genomes (optional)", out.width = '120%', results='asis', warning=FALSE, message=FALSE}
+```{r graphStep1, echo=FALSE, fig.align="center", fig.cap="Step 1 - Formatting the information from 1000 Genomes (optional)", out.width='120%', results='asis', warning=FALSE, message=FALSE}
 knitr::include_graphics("MainSteps_Step1_v01.png")
 ```
 
@@ -170,7 +170,7 @@ vignette.
 Molecular profiles in a cancer-derived data set must be formatted 
 following a series of sub-steps.
 
-```{r graphStep2, echo = FALSE, fig.align="center", fig.cap="Step 2 - Formatting the information from an external study", out.width = '120%', results='asis', warning=FALSE, message=FALSE}
+```{r graphStep2, echo=FALSE, fig.align="center", fig.cap="Step 2 - Formatting the information from an external study", out.width='120%', results='asis', warning=FALSE, message=FALSE}
 knitr::include_graphics("MainSteps_Step2_v01.png")
 ```
 
@@ -216,7 +216,7 @@ wget https://labshare.cshl.edu/shares/krasnitzlab/aicsPaper/snvSel0.01.vcf.gz
 ```
 
 The 3 files should be stored in the same directory. In the example below, 
-this directory is referred to as **PATH_1KG**.
+this directory is referred to as **path1KG**.
 
 For more information on creating your own reference files, 
 see the vignette 
@@ -264,23 +264,23 @@ This is the command line to run
 ## -q15 : Sets the minimum threshold for mapping quality to 15
 ## -Q20 : Sets the minimum threshold for base quality to 20
 ## -r0 : Sets the minimum read counts for a position to be output to 0
-## PATH_1KG/snvSel0.01.vcf.gz : The SNP Retained VCF file containing the 
+## path1KG/snvSel0.01.vcf.gz : The SNP Retained VCF file containing the 
 ##     positions of all retained 1KG SNPs
 ## PATH_OUT/Name.ID.txt : The name of the output Sample VCF file that will be
 ##     compressed by the application
 ## FILEBAM.bam : The aligned reads from the sample used as input
 #####################################################################
-snp-pileup -g -d5000 -q15 -Q20  -r0 PATH_1KG/snvSel0.01.vcf.gz PATH_OUT/Name.ID.txt FILEBAM.bam
+snp-pileup -g -d5000 -q15 -Q20  -r0 path1KG/snvSel0.01.vcf.gz PATH_OUT/Name.ID.txt FILEBAM.bam
 ```
 
 <br>
 
 ### Sub-Step 3. Create a profile PED RDS file containing the information about the profiles
 
-An RDS file describing all the profiles analyzed 
+An RDS file describing all the profiles to be analyzed 
 is required.
 
-The RDS file must contain a *data.frame* with these 5 columns: 
+The PED RDS file must contain a *data.frame* with these 5 columns: 
 
 - **Name.ID**: The unique sample identifier. The profile VCF file  
 should be called "Name.ID.txt.gz". 
@@ -302,19 +302,19 @@ in R (with _read.csv()_ or else).
 ##############################################################
 ## Location of the Sample PED RDS file to be created
 ##############################################################
-data.dir <- system.file("extdata", package="RAIDS")
-demo_PED_File <- file.path(data.dir, "Demo_PED.RDS")
+dataDir <- system.file("extdata", package="RAIDS")
+demo_PED_File <- file.path(dataDir, "Demo_PED.RDS")
 
 ##############################################################
 ## Create a data frame with the mandatory columns
 ## All columns are in character string format (no factor)
 ##############################################################
-pedDF <- data.frame(Name.ID = c("Sample_01", "Sample_02", "Sample_03"),
-                    Case.ID = c("Patient_h11", "Patient_h12", "Patient_h18"), 
-                    Sample.Type = rep("Primary Tumor", 3),
-                    Diagnosis = rep("Cancer", 3),
-                    Source = rep("Databank B", 3),
-                    stringsAsFactors = FALSE)
+pedDF <- data.frame(Name.ID=c("Sample_01", "Sample_02", "Sample_03"),
+                    Case.ID=c("Patient_h11", "Patient_h12", "Patient_h18"), 
+                    Sample.Type=rep("Primary Tumor", 3),
+                    Diagnosis=rep("Cancer", 3),
+                    Source=rep("Databank B", 3),
+                    stringsAsFactors=FALSE)
 
 ##############################################################
 ## The row names must correspond to the name of the samples
@@ -335,14 +335,14 @@ rm(demo_PED_File)
 
 ### Sub-Step 4 Create a profile GDS file (1 GDS file per profile) 
 
-From here you can run directly the [wrapper](#wrapper) function 
-or you can run each step separetly as explained here.
+From here, you can run directly the [wrapper](#wrapper) function 
+or you can run each step separately as explained here.
 
 This step requires 3 files as input:
 
 - The **1KG GDS file**
-- The **Sample SNP pileup file** (one per sample present in the study)
-- The **Sample PED RDS file** (one file with information for all samples in the study)
+- The **Sample SNP pileup file** (one per profile present in the study)
+- The **Sample PED RDS file** (one file with information for all profiles in the study)
 
 A *data.frame* containing the general information about the study is 
 also required. The *data.frame* must contain those 3 columns:
@@ -367,29 +367,29 @@ library(RAIDS)
 ## Note that the 1KG GDS file used for this example is a  
 ## simplified version and CANNOT be used for any real analysis
 #################################################################
-data.dir <- system.file("extdata", package="RAIDS")
-PATH_1KG <- file.path(data.dir, "example", "gdsRef")
+dataDir <- system.file("extdata", package="RAIDS")
+path1KG <- file.path(dataDir, "example", "gdsRef")
     
 fileName.GDS.1KG <- "ex1kg.gds"
-file.GDS <- file.path(PATH_1KG, fileName.GDS.1KG)
+file.GDS <- file.path(path1KG, fileName.GDS.1KG)
 
 #################################################################
 ## The Sample SNP pileup files (one per sample) need  
 ## to be located in the same directory.
 #################################################################
-pathGeno <- file.path(data.dir, "example", "snpPileup")
+pathGeno <- file.path(dataDir, "example", "snpPileup")
 
 #################################################################
 ## The path where the Sample GDS files (one per sample)
 ## will be created need to be specified.
 #################################################################
-pathProfileGDS <- file.path(data.dir, "example", "out")
+pathProfileGDS <- file.path(dataDir, "example", "out")
 
 #################################################################
 ## The path and file name for the PED RDS file
 ## will the information about the analyzed samples
 #################################################################
-filePED <- file.path(data.dir, "example", "pedEx.rds")
+filePED <- file.path(dataDir, "example", "pedEx.rds")
 ped <- readRDS(filePED)
 head(ped)
 
@@ -398,10 +398,10 @@ head(ped)
 ## is also required. The data frame must have
 ## those 3 columns: "study.id", "study.desc", "study.platform"
 #################################################################
-studyDF <- data.frame(study.id = "MYDATA",
-                        study.desc = "Description",
-                        study.platform = "PLATFORM",
-                        stringsAsFactors = FALSE)
+studyDF <- data.frame(study.id="MYDATA",
+                        study.desc="Description",
+                        study.platform="PLATFORM",
+                        stringsAsFactors=FALSE)
 
 #################################################################
 ## The list of profiles to analyzed is passed to the function.
@@ -416,19 +416,19 @@ listSamples <- ped[, "Name.ID"]
 ## This function creates one Sample GDS file for each
 ## sample present in the 'listProfiles' parameter.
 #################################################################
-createStudy2GDS1KG(pathGeno = pathGeno,
-                        pedStudy = ped,
-                        fileNameGDS = file.GDS,
-                        listProfiles = listSamples,
-                        studyDF = studyDF,
-                        pathProfileGDS = pathProfileGDS,
+createStudy2GDS1KG(pathGeno=pathGeno,
+                        pedStudy=ped,
+                        fileNameGDS=file.GDS,
+                        listProfiles=listSamples,
+                        studyDF=studyDF,
+                        pathProfileGDS=pathProfileGDS,
                         genoSource="snp-pileup")
 
 #################################################################
 ## The Sample GDS file has been created in the 
 ## directory pathProfileGDS using the name of the sample (ex1)
 #################################################################
-list.files(path = pathProfileGDS)
+list.files(path=pathProfileGDS)
 ```
 
 <br>
@@ -455,10 +455,10 @@ library(RAIDS)
 ## Note that the 1KG GDS file used for this example is a  
 ## simplified version and CANNOT be used for any real analyses
 ##############################################################
-PATH_1KG <- file.path(data.dir, "example", "gdsRef")
+path1KG <- file.path(dataDir, "example", "gdsRef")
     
 fileName.GDS.1KG <- "ex1kg.gds"
-file.GDS <- file.path(PATH_1KG, fileName.GDS.1KG)
+file.GDS <- file.path(path1KG, fileName.GDS.1KG)
 
 ## Open the 1KG GDS file (demo version)
 gds_1KG <- snpgdsOpen(file.GDS)
@@ -485,9 +485,9 @@ for(i in seq_len(length(listSamples))) {
     ## Add the genotype information for the list of pruned SNVs 
     ## into the Profile GDS file
     ## The genotype information is extracted from the 1KG GDS file
-    add1KG2SampleGDS(gdsReference = gds_1KG, fileProfileGDS = file.GDSSample,
-                        currentProfile = listSamples[i],
-                        studyID = studyDF$study.id)
+    add1KG2SampleGDS(gdsReference=gds_1KG, fileProfileGDS=file.GDSSample,
+                        currentProfile=listSamples[i],
+                        studyID=studyDF$study.id)
 
     ## Add annotation from the 1KG GDS file to the Sample GDS file
     ## This is required.
@@ -567,13 +567,13 @@ library(RAIDS)
 ## The 1KG GDS file is required
 ## The 1KG SNV Annotation GDS file is only required for RNA samples
 ###################################################################
-PATH_1KG <- file.path(data.dir, "example", "gdsRef")
+path1KG <- file.path(dataDir, "example", "gdsRef")
     
 fileName.GDS.1KG <- "ex1kg.gds"
 fileName.GDS.Annot <- "exAnnot1kg.gds"
 
-file.GDS <- file.path(PATH_1KG, fileName.GDS.1KG)
-file.Annot <- file.path(PATH_1KG, fileName.GDS.Annot)
+file.GDS <- file.path(path1KG, fileName.GDS.1KG)
+file.Annot <- file.path(path1KG, fileName.GDS.Annot)
 
 ## Open the 1KG GDS file
 gds <- snpgdsOpen(file.GDS)
@@ -600,7 +600,7 @@ sampleName <- listSamples[1]
 file.GDSSample <- file.path(pathProfileGDS, paste0(sampleName, ".gds"))
 
 ## Open the Sample GDS file in writing mode
-gdsSample <- openfn.gds(file.GDSSample, readonly = FALSE)
+gdsSample <- openfn.gds(file.GDSSample, readonly=FALSE)
 
 ###################################################################
 ## The estimation of the allelic fraction
@@ -612,10 +612,10 @@ gdsSample <- openfn.gds(file.GDSSample, readonly = FALSE)
 ## such as the 1KG SNV Annotation GDS file and
 ## the block.id should be as listed in the 1KG SNV Annotation GDS file 
 ## for the gene annotation of the SNVs
-estimateAllelicFraction(gdsReference = gds, gdsSample = gdsSample,
-                                        currentProfile = sampleName,
-                                        studyID = studyDF$study.id,
-                                        chrInfo = chrInfo)
+estimateAllelicFraction(gdsReference=gds, gdsSample=gdsSample,
+                                        currentProfile=sampleName,
+                                        studyID=studyDF$study.id,
+                                        chrInfo=chrInfo)
 
 ## Close both GDS files
 closefn.gds(gdsSample)
@@ -632,7 +632,7 @@ This step must be executed for each sample present in the study.
 At this step, optimization of the parameters is required to maximize the 
 the ancestry inference accuracy (next step).
 
-```{r graphStep3, echo = FALSE, fig.align="center", fig.cap="Step 3 - Find the optimized parameters for the ancestry inference", out.width = '120%', results='asis', warning=FALSE, message=FALSE}
+```{r graphStep3, echo=FALSE, fig.align="center", fig.cap="Step 3 - Find the optimized parameters for the ancestry inference", out.width='120%', results='asis', warning=FALSE, message=FALSE}
 knitr::include_graphics("MainSteps_Step3_v01.png")
 ```
 
@@ -706,7 +706,7 @@ set.seed(3043)
 ## subcontinental-level (for demo purpose only)
 ####################################################################
 
-dataRef <- select1KGPop(gds, nbSamples = 2L)
+dataRef <- select1KGPop(gds, nbSamples=2L)
 
 ## Extract the list of selected 1KG sample identifiers
 listSampleRef <- dataRef$sample.id
@@ -716,10 +716,10 @@ listSampleRef <- dataRef$sample.id
 ## data is required.
 ## The column names must be as shown
 #################################################################### 
-studyDF.syn <- data.frame(study.id = "MYDATA.Synthetic",
-                          study.desc = "MYDATA synthetic data",
-                          study.platform = "PLATFORM",
-                          stringsAsFactors = FALSE)
+studyDF.syn <- data.frame(study.id="MYDATA.Synthetic",
+                          study.desc="MYDATA synthetic data",
+                          study.platform="PLATFORM",
+                          stringsAsFactors=FALSE)
 
 ## The Sample GDS file is needed
 file.GDSSample <- file.path(pathProfileGDS, paste0(sampleName, ".gds"))
@@ -729,21 +729,21 @@ file.GDSSample <- file.path(pathProfileGDS, paste0(sampleName, ".gds"))
 ## the synthetic data
 ## The information is saved into the Sample GDS file
 ####################################################################
-prepSynthetic(fileProfileGDS = file.GDSSample,
-                listSampleRef = listSampleRef,
-                data.id.profile = sampleName,
-                studyDF = studyDF.syn,
-                prefId = "1")
+prepSynthetic(fileProfileGDS=file.GDSSample,
+                listSampleRef=listSampleRef,
+                data.id.profile=sampleName,
+                studyDF=studyDF.syn,
+                prefId="1")
 
 ####################################################################
 ## Both the 1KG GDS file and the 1KG SNV Annotation GDS file
 ## are required
 ####################################################################
-PATH_1KG <- file.path(data.dir, "example", "gdsRef")
+path1KG <- file.path(dataDir, "example", "gdsRef")
 
 fileName.GDS.Annot <- "exAnnot1kg.gds"
 
-file.Annot <- file.path(PATH_1KG, fileName.GDS.Annot)
+file.Annot <- file.path(path1KG, fileName.GDS.Annot)
 
 ## Open the 1KG GDS file and 1KG SNV Annotation file    
 gds.Annot <- openfn.gds(file.Annot)
@@ -752,12 +752,12 @@ gds.Annot <- openfn.gds(file.Annot)
 ## The syntheticGeno() function generates the synthetic profiles.
 ## The synthetic profiles are saved in the Sample GDS file
 ####################################################################
-resG <- syntheticGeno(gdsReference = gds,
-                        gdsRefAnnot = gds.Annot,
-                        fileProfileGDS = file.GDSSample,
-                        data.id.profile = sampleName,
-                        listSampleRef = listSampleRef,
-                        prefId = "1")
+resG <- syntheticGeno(gdsReference=gds,
+                        gdsRefAnnot=gds.Annot,
+                        fileProfileGDS=file.GDSSample,
+                        data.id.profile=sampleName,
+                        listSampleRef=listSampleRef,
+                        prefId="1")
 
 ## Close both GDS files
 closefn.gds(gds)
@@ -808,7 +808,7 @@ set.seed(3043)
     
 ## Select the 1KG samples used to generate the synthetic dataset
 ## Already done in step 6, no need to repeat if the results have been saved
-dataRef <- select1KGPop(gds, nbSamples = 2L)
+dataRef <- select1KGPop(gds, nbSamples=2L)
 
 ####################################################################
 ## The function splitSelectByPop() generates a matrix with the
@@ -846,12 +846,12 @@ for(i in seq_len(length(listSamples))) {
         ##  removed from this PCA)
         ## The K-nearest neighbor analysis is done using 
         ##  a range of K and D values
-        KNN.synt <- computePoolSyntheticAncestryGr(gdsSample = gdsSample,
-                                            sampleRM =  sampleRM[j,],
-                                            studyIDSyn = studyDF.syn$study.id,
-                                            np = 4L,
-                                            spRef = spRef,
-                                            eigen.cnt = 15L)
+        KNN.synt <- computePoolSyntheticAncestryGr(gdsSample=gdsSample,
+                                            sampleRM= sampleRM[j,],
+                                            studyIDSyn=studyDF.syn$study.id,
+                                            np=4L,
+                                            spRef=spRef,
+                                            eigen.cnt=15L)
         
         ## Results are saved
         saveRDS(KNN.synt$matKNN, file.path(PATH_OUT_SAMPLE, 
@@ -879,7 +879,7 @@ a k-nearest neighbors classification method. The _K_ parameter specifies the
 number of neighbors used for the classification.
 
 
-```{r graphStep4, echo = FALSE, fig.align="center", fig.cap="Step 4 - Run the ancestry inference on the external study", out.width = '120%', results='asis', warning=FALSE, message=FALSE}
+```{r graphStep4, echo=FALSE, fig.align="center", fig.cap="Step 4 - Run the ancestry inference on the external study", out.width='120%', results='asis', warning=FALSE, message=FALSE}
 knitr::include_graphics("MainSteps_Step4_v01.png")
 ```
 
@@ -939,20 +939,20 @@ for(i in seq_len(length(listSamples))){
     ## Open the Sample GDS file
     gdsSample <- snpgdsOpen(file.GDSSample)
 
-    resCall <- computeAncestryFromSyntheticFile(gdsReference = gds, 
-                                    gdsSample = gdsSample,
-                                    listFiles = listFiles,
-                                    sample.ana.id = listSamples[i],
-                                    spRef = spRef,
-                                    studyIDSyn = studyDF.syn$study.id,
-                                    np = 1L)
+    resCall <- computeAncestryFromSyntheticFile(gdsReference=gds, 
+                                    gdsSample=gdsSample,
+                                    listFiles=listFiles,
+                                    sample.ana.id=listSamples[i],
+                                    spRef=spRef,
+                                    studyIDSyn=studyDF.syn$study.id,
+                                    np=1L)
 
     saveRDS(resCall, file.path(PATH_OUT,
                                 paste0(listSamples[i], ".infoCall", ".rds")))
 
     write.csv(resCall$Ancestry,
             file.path(PATH_OUT, paste0(listSamples[i], ".Ancestry",".csv")),
-            quote = FALSE, row.names = FALSE)
+            quote=FALSE, row.names=FALSE)
     
     ## Close the Sample GDS file (important)
     closefn.gds(gdsSample)
@@ -972,7 +972,7 @@ resAncestry
 
 ## Clean-up demo files
 unlink(file.GDSSample, force=TRUE)
-unlink(PATH_OUT, recursive = TRUE, force=TRUE)
+unlink(PATH_OUT, recursive=TRUE, force=TRUE)
 ```
 
 
